fix: improve UX of <function-span> and <property-span> on mobile.
Reduce height to show more spans in viewport.

--- a/src/app/components/spans/function-span/function-span.component.scss
+++ b/src/app/components/spans/function-span/function-span.component.scss
@@ -44,4 +44,8 @@
       overflow-x: auto;
     }
   }
+
+  @media (max-width: 1025px) {
+    margin: 12px 0;
+  }
 }
