--- a/src/app/components/spans/property-span/property-span.component.scss
+++ b/src/app/components/spans/property-span/property-span.component.scss
@@ -30,5 +30,6 @@
 
   @media (max-width: 1025px) {
     flex-flow: column;
+    margin: 12px 0;
   }
 }
